--- a/views/biodata/create-user.html
+++ b/views/biodata/create-user.html
@@ -44,12 +44,7 @@
                         <input class="input" id="lastName" name="lastName" type="text" placeholder="Last name">
                     </div>
                 </div>
-                <div class="field">
-                    <label class="label">Email:</label>
-                    <div class="control has-icons-right">
-                        <input class="input" id="email" name="email" type="email" placeholder="Email" required>
-                    </div>
-                </div>
+                
                 <div class="field">
                     <label class="label">Date of birth:</label>
                     <div class="control has-icons-right">
@@ -57,18 +52,35 @@
                     </div>
                 </div>
                 <div class="field">
-                    <label class="label">Nationality:</label>
+                    <label class="label">Country Of Birth:</label>
                     <div class="control has-icons-right">
-                        <input class="input" id="nationality" name="nationality" type="text" placeholder="Nationality">
+                        <input class="input" id="nationality" name="nationality" type="text" placeholder="Country Of Birth">
                     </div>
                 </div>
                 <div class="field">
-                    <label class="label">Address:</label>
+                    <label class="label">State Of Birth:</label>
                     <div class="control has-icons-right">
-                        <input class="input" id="address" name="address" type="text" placeholder="Address">
+                        <input class="input" id="address" name="address" type="text" placeholder="State Of Birth">
                     </div>
                 </div>
-                
+                <div class="field">
+                    <label class="label">Town Of Birth:</label>
+                    <div class="control has-icons-right">
+                        <input class="input" id="address" name="address" type="text" placeholder="Town Of Birth">
+                    </div>
+                </div>
+                <div class="field">
+                    <label class="label">Residence Address:</label>
+                    <div class="control has-icons-right">
+                        <input class="input" id="address" name="address" type="text" placeholder=" Residdence Address">
+                    </div>
+                </div>
+                <div class="field">
+                    <label class="label">Profession:</label>
+                    <div class="control has-icons-right">
+                        <input class="input" id="address" name="address" type="text" placeholder="Profession">
+                    </div>
+                </div>
                 <div class="field is-grouped">
                     <div class="control">
                         <button type="submit" id="submitCreateUserForm" class="button is-link is-small">Submit</button>
