--- a/views/biodata/create-user.html
+++ b/views/biodata/create-user.html
@@ -12,7 +12,7 @@
                 <a href="/about-us">About Us</a>
             </div>
             <div>
-                <a href="/users/create" class="active">Add user</a>
+                <a href="/biodata/create" class="active">Add user</a>
             </div>
         </div>
         <div class="navigation-bar-right">
@@ -24,7 +24,7 @@
         </div>
     </div>
     <div class="grid-item-row-2">
-        <form class="box" id="createUserForm" action="/users" method="POST">
+        <form class="box" id="createBiodataForm" action="/biodata" method="POST">
             <fieldset id="createUserFormFieldSet" class="container">
                 <div class="field">
                     <label class="label">First name:</label>
@@ -113,9 +113,9 @@
 {% endblock %}
 
 <script>
-    const createUserForm = document.getElementById('createUserForm');
+    const createBiodatumForm = document.getElementById('createBiodatumForm');
 
-    createUserForm.addEventListener('submit', (event) => {
+    createBiodatumForm.addEventListener('submit', (event) => {
     event.preventDefault();
 
     //Get fields and check validities
@@ -133,11 +133,6 @@
         return false;
     }
 
-    const email = document.getElementById('email').value;
-    if (email == '') {
-        email.reportValidity();
-        return false;
-    }
 
     const dateOfBirth = document.getElementById('dateOfBirth').value;
     if (dateOfBirth == '') {
@@ -145,13 +140,20 @@
         return false;
     }
     
-    const nationality = document.getElementById('nationality').value;
+    const countryofbirth = document.getElementById('countryofbirth').value;
     
-    const address = document.getElementById('address').value;
+    const stateofbirth = document.getElementById('stateofbirth').value;
+
+    const townofbirth = document.getElementById('townofbirth').value;
+   
+    const residenceaddress = document.getElementById('residenceaddress').value;
+
+    const profession = document.getElementById('profession').value;
+
 
 
     //start the button spinner
-    document.getElementById("submitCreateUserForm").classList.add("is-loading");
+    document.getElementById("submitCreateBiodatumForm").classList.add("is-loading");
 
     //prepare init for fetch
     const init = {
@@ -164,14 +166,14 @@
     }
 
     //call fetch
-    fetch('/users', init)
+    fetch('/biodata', init)
         .then(response => response.json())
         .then(data => {
             //alert(JSON.stringify(data))
             //remove spinner class
-            document.getElementById("submitCreateUserForm").classList.remove("is-loading");
+            document.getElementById("submitCreateBiodatumForm").classList.remove("is-loading");
             //set notification
-            document.getElementById("notificationMessage").innerHTML = 'User creation successful';
+            document.getElementById("notificationMessage").innerHTML = 'Biodata creation successful';
             //add notification color class sent
             document.getElementById("notification").classList.add("is-success");
             //remove is-hidden from notificationWrapper
@@ -180,7 +182,7 @@
         })
         .catch(error => {
             //remove spinner class
-            document.getElementById("submitCreateUserForm").classList.remove("is-loading");
+            document.getElementById("submitCreateBiodatumForm").classList.remove("is-loading");
 
             document.getElementById("notificationMessage").innerHTML = error.message;
             //add notification color class sent
